--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "lint-staged": {
+    "*.js": [
+      "standard"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jtandrelevicius/clean-node-api.git"
@@ -17,6 +22,7 @@
   },
   "homepage": "https://github.com/jtandrelevicius/clean-node-api#readme",
   "devDependencies": {
+    "husky": "^7.0.4",
     "lint-staged": "^12.3.7",
     "standard": "^16.0.4"
   }
