add husky and lint-staged

--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
   },
   "lint-staged": {
     "*.js": [
-      "standard"
+      "standard --fix",
+      "git add"
     ]
+  },
+  "husky":{
+    "hooks":{
+      "pre-commit": "lint-staged"
+    }
   },
   "repository": {
     "type": "git",
