--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jtandrelevicius/clean-node-api.git"
+  },
+  "standard":{
+    "env": ["jest"]
   },
   "author": "",
   "license": "ISC",
